# memory-lane

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
memory_lane/: __init__.py  api.py  cli.py  dynamics.py  exporters.py  importers.py  life_story.py  lmd_bridge.py  media.py  models.py  schemas.py  service.py  sparks.py  storage.py  web.py
memory_lane/static/: app.css
memory_lane/templates/: add_memory.html  base.html  index.html  memory.html  patient.html  report.html  session.html  story.html
memory_lane/templates/fragments/: memory_card.html  sparks.html
tests/: conftest.py  test_api.py  test_bridge.py  test_era_and_report.py  test_exporters.py  test_media.py  test_service.py  test_sparks_and_story.py
