[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memory-lane"
version = "0.1.0"
description = "A caregiver-facing life-story and reminiscence companion tool for families of people living with dementia. Not a medical device."
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Joshua R. Thomas", email = "mordiaky@gmail.com"}
]
keywords = [
    "dementia",
    "alzheimers",
    "caregiver",
    "reminiscence-therapy",
    "episodic-memory",
    "life-story",
    "wellness",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Home Automation",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = [
    "living-memory-dynamics>=1.3.0",
    "sqlalchemy>=2.0",
    "pydantic>=2.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "typer>=0.12",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "httpx>=0.27",
    "ruff>=0.1.0",
]

[project.scripts]
memory-lane = "memory_lane.cli:app"

[project.urls]
Repository = "https://github.com/mordiaky/memory-lane"
Issues = "https://github.com/mordiaky/memory-lane/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["memory_lane*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = [
    "E501",
    "N803",
    "N806",
    "N812",
    "UP006",
    "UP035",
    "B008",  # Typer/FastAPI use callable defaults (Option, Depends); standard pattern.
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
